# esup-campulse-back

./: .coveragerc  .dockerignore  .env  .env.default  .git_archival.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  docker-prestart.sh  fabfile.py  generate_requirements.sh  manage.py  prestart.sh  pyproject.toml  run_tests.py  schema.yml  setup.py  sonar-project.properties  tox.ini  uwsgi.ini
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Default.md
docker/: .env.dev-dist  .env.dev.dist  Dockerfile  ingress.yml  prestart.sh  servers.json  uwsgi.ini
docker/api/: .env.dev.dist  Dockerfile  prestart.sh  uwsgi.ini
docker/app/: Dockerfile  entrypoint.sh  uwsgi.ini
docker/db/: .env.dev.dist  Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docs/: Makefile  conf.py  config.toml  index.rst
docs/content/: _index.md
docs/content/backend/: 01-pre-requis.md  02-virtualenv.md  03-dependances.md  04-django.md  05-base-de-donnees.md  07-cron.md  1-installation.md  2-configuration.md  3-developpement.md  4-base-de-donnees.md  5-droits.md  _index.md  tmp-base-de-donnees.md  tmp-developpement.md  tmp-droits.md
docs/content/backend/1-installation/: 01-pre-requis.md  02-virtualenv.md  03-dependances.md  04-django.md  05-base-de-donnees.md  06-chiffrement.md  07-cron.md  07-serveur-et-s3.md  07-serveur.md  08-cron.md  08-notifications.md  09-notifications.md  _index.md
docs/content/backend/2-developpement/: 01-routes.md  02-commandes.md  02-librairies.md  03-droits.md  03-structure.md  04-comptes.md  04-droits.md  05-comptes.md  06-commandes.md  _index.md
docs/content/backend/3-personnalisation/: 01-base-de-donnees.md  01-variables.md  02-base-de-donnees.md  02-ci.md  02-exports-notifications-pdf.md  03-exports-notifications-pdf.md  _index.md
docs/content/backend/4-saas/: 01-ci.md  02-personnalisation.md  _index.md
docs/content/frontend/: _index.md
docs/content/frontend/1-installation/: 01-pre-requis.md  02-dependances.md  03-variables-env.md  03-vue.md  _index.md
docs/content/frontend/2-developpement/: 01-librairies.md  02-commandes.md  02-structure.md  03-commandes.md  03-configuration.md  04-typage.md  05-structure.md  06-router.md  07-tests-unitaires.md  08-i18n.md  09-layouts-et-styles.md  _index.md
docs/content/frontend/3-personnalisation/: 01-variables.md  02-polices.md
docs/content/frontend/3-saas/: 01-ci.md  02-personnalisation.md  03-deploiement.md  _index.md
docs/layouts/partials/: custom-header.html  favicon.html  logo.html  menu-footer.html
fabfile/: __init__.py  amiens.py  lille.py  montpellier3.py  rouen.py  sentry.py
plana/: admin.py  decorators.py  filters.py  models.py  serializers.py  storages.py  urls.py  utils.py  views.py  wsgi.py
plana/apps/associations/: admin.py  apps.py  backends.py  filters.py  managers.py  models.py  permissions.py  serializers.py  storages.py  urls.py  utils.py  views.py
plana/apps/associations/fixtures/: activity_field.json  associations.json  associations_activityfield.json  associations_association.json  associations_association_real.json  associations_institution.json  associations_institutioncomponent.json  associations_socialnetwork.json  institution_components.json  institutions.json  socialnetworks.json
plana/apps/associations/migrations/: 0001_initial.py  0002_auto_20221027_1407.py  0003_auto_20221027_1609.py  0004_auto_20221027_1621.py  0005_alter_association_is_enabled.py  0006_auto_20221114_1459.py  0007_auto_20221125_1527.py  0008_association_alt_logo.py  0009_alter_association_phone.py  0010_association_president_names.py  0011_auto_20221212_0925.py  0012_alter_association_name.py  0013_association_is_public.py  0014_alter_association_path_logo.py  0015_auto_20230109_0845.py  0016_delete_socialnetwork.py  0017_association_social_networks.py  0018_alter_association_siret.py  0019_association_phone_pres.py  0020_alter_association_path_logo.py  0021_auto_20230126_1102.py  0022_alter_association_path_logo.py  0024_auto_20230130_1035.py  (+22 more)
plana/apps/commissions/: admin.py  apps.py  urls.py
plana/apps/consents/: apps.py  urls.py
plana/apps/contents/: admin.py  apps.py  filters.py  models.py  urls.py
plana/apps/documents/: admin.py  apps.py  filters.py  urls.py
plana/apps/groups/: apps.py  urls.py
plana/apps/history/: admin.py  apps.py
plana/apps/institutions/: admin.py  apps.py  urls.py
plana/apps/projects/: admin.py  apps.py  filters.py  urls.py
plana/apps/users/: adapter.py  admin.py  apps.py  cas_serializer.py  filters.py  models.py  permissions.py  provider.py  serializers.py  urls.py  views.py
plana/libs/: validators.py
plana/libs/api/: ldap_client.py  spore_client.py
plana/libs/mail_template/: admin.py  admin_forms.py  apps.py  managers.py  models.py  urls.py  utils.py  views.py
plana/management/commands/: account_expiration.py  clean_database.py  clean_storages.py  commission_expiration.py  createmanageruser.py  cron_account_expiration.py  cron_association_expiration.py  cron_commission_expiration.py  cron_daily.py  cron_document_expiration.py  cron_goa_expiration.py  cron_history_expiration.py  cron_password_expiration.py  cron_project_expiration.py  cron_review_expiration.py  flush_storages.py  generate_age_keys.py  generate_jwt_keys.py  initial_import.py  loaddata_storages.py  password_expiration.py  reset_permissions.py
plana/settings/: base.py  citest.py  demo.py  dev.py  docker.py  oci.py  permissions.py  preprod.py  prod.py  saas.py  test.py  unittest.py
plana/static/css/: unistrap.css
plana/templates/: base.html  pdf_project.html
plana/templates/pdf_exports/: association_charter_summary.html  commission_projects_list.html  project_review_summary.html  project_summary.html
plana/templatetags/: dipstrapfiles.py  plana_tags.py  resolve.py
plana/tests/: test_commands.py  test_storages.py  test_utils.py  test_views.py
requirements/: auto-common.txt  common.txt  demo.txt  dev.txt  preprod.txt  prod.txt  saas.txt  test.txt
(+439 files in other folders)
