[tool.black]
line-length = 119
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | plana\/settings
    | plana\/apps\/associations\/migrations
    | plana\/apps\/commissions\/migrations
    | plana\/apps\/contents\/migrations
    | plana\/apps\/documents\/migrations
    | plana\/apps\/groups\/migrations
    | plana\/apps\/institutions\/migrations
    | plana\/apps\/projects\/migrations
    | plana\/apps\/users\/migrations
    | fabfile
    | _build
    | buck-out
    | build
    | dist
  )/
  | manage.py
  | tox.ini
  | .coveragerc
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "plana"
version = "1.2.0"
description = ""
authors = ["DIP - Université de Strasbourg <dnum-dip@unistra.fr>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
django = "<5.0"
django-allauth = "<0.55" # higher versions broke django-allauth-cas
# django-allauth-cas = "^1.0.0" # deprecated package for Django 4, need to use a pull request
django-allauth-cas = { url = "https://github.com/thejoeejoee/django-allauth-cas/archive/5db34b546eb32524a3a1a4b90f411e370ac7ad9b.zip" }
django-cleanup = "^8.1.0"
django-cors-headers = "^4.4.0"
django-extensions = "^3.2.3"
django-health-check = "^3.18.3"
django-storages = {extras = ["boto3"], version = "^1.14.4"}
django-summernote = "<0.9"
django-thumbnails = "^0.7.0"
djangorestframework = "^3.15.2"
djangorestframework-camel-case = "^1.4.2"
djangorestframework-simplejwt = "^5.3.1"
dj-rest-auth = "^6.0.0"
drf-spectacular = "^0.27.2"
britney = "^0.5.1"
jsonschema = "^4.23.0"
openpyxl = "^3.1.4"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pyrage = "^1.1.2"
referencing = "^0.35.1"
urllib3 = "<2.0" # needed to avoid dependency problems when updating boto3 and botocore
weasyprint = "^62.3"
zxcvbn = "^4.4.28"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.6.0"
django-debug-toolbar = "^4.4.6"
pre-commit = "^3.7.1"
pylint = "^3.2.5"
pylint-django = "^2.5.5"
safety = "^3.2.3"
sentry-sdk = "^1.45.0"
tox = "^4.16.0"

[tool.poetry.group.demo.dependencies]
chaussette-backport = "^1.3.1"
sentry-sdk = "^1.45.0"
waitress = "^2.1.2"

[tool.poetry.group.preprod.dependencies]
chaussette-backport = "^1.3.1"
sentry-sdk = "^1.45.0"
waitress = "^2.1.2"

[tool.poetry.group.prod.dependencies]
chaussette-backport = "1.3.1"
sentry-sdk = "^1.45.0"
waitress = "^2.1.2"

[tool.poetry.group.test.dependencies]
chaussette-backport = "^1.3.1"
sentry-sdk = "^1.45.0"
waitress = "^2.1.2"
